Fix Journey layout issues, revert Japan photos to old simple design for now

--- a/source-sass/app.scss
+++ b/source-sass/app.scss
@@ -14,6 +14,7 @@
 $dark-blue: #161f29;
 $dirty-blue: #7fa5c1;
 $juicy-blue: #3a9ae2;
+$yellow: #ffbf42;
 
 $grey: #65768a;
 $off-white: #c2d2de;
@@ -97,7 +98,7 @@ h1 {
   font-family: $header-font;
   text-transform: uppercase;
   line-height: 1;
-  color: $juicy-orange;
+  color: $yellow;
 
   @media #{$medium-up} {
     font-size: 4.25em;
@@ -313,7 +314,7 @@ section:not(.hero) {
 }
 
 .credit-logo--right {
-  top: 2rem;
+  top: 2.3rem;
   right: 3rem;
 }
 
@@ -558,8 +559,8 @@ section:not(.hero) {
   overflow: hidden;
 
   @media #{$medium-up} {
-    margin-top: 12rem;
-    margin-bottom: 12rem;
+    // margin-top: 12rem;
+    // margin-bottom: 12rem;
     padding-top: 50%;
     padding-bottom: 50%;
   }
@@ -598,8 +599,9 @@ section:not(.hero) {
     display: inline-block;
     // float: left;
     margin: 0 0 27px 30px;
+    margin-bottom: 0;
     width: auto;
-    padding: 10px;
+    // padding: 10px;
     text-align: center;
     text-decoration: none;
     color: #333;
@@ -610,10 +612,10 @@ section:not(.hero) {
     z-index: 1;
 
     img {
-      opacity: 0.45;
+      opacity: 0.65;
       -webkit-filter: grayscale(20%);
-      -webkit-clip-path: polygon(50% 0%, 100% 20%, 100% 80%, 50% 100%, 0% 80%, 0% 20%);
-              clip-path: polygon(50% 0%, 100% 20%, 100% 80%, 50% 100%, 0% 80%, 0% 20%);
+      // -webkit-clip-path: polygon(50% 0%, 100% 20%, 100% 80%, 50% 100%, 0% 80%, 0% 20%);
+              // clip-path: polygon(50% 0%, 100% 20%, 100% 80%, 50% 100%, 0% 80%, 0% 20%);
     }
   }
 
@@ -622,12 +624,12 @@ section:not(.hero) {
     a {
 
       &:first-of-type {
-        top: -100px;
+        // top: -100px;
       }
 
       &:nth-of-type(2) {
-        top: -70px;
-        left: 80px;
+        // top: -70px;
+        // left: 80px;
 
         img {
           opacity: 0.25;
@@ -635,7 +637,7 @@ section:not(.hero) {
       }
 
       &:nth-of-type(2n-1) {
-        left: 120px;
+        // left: 120px;
       }
 
       &:last-of-type {
@@ -650,7 +652,7 @@ section:not(.hero) {
   .medium-6 {
 
     @media #{$medium-up} {
-      margin-top: -5rem;
+      // margin-top: -5rem;
     }
 
     .row {
@@ -659,10 +661,10 @@ section:not(.hero) {
     }
 
     a {
-      left: -20px;
+      // left: -20px;
 
       &:first-of-type {
-        top: -10px;
+        // top: -10px;
 
         img {
           opacity: 0.2;
@@ -670,7 +672,7 @@ section:not(.hero) {
       }
 
       &:last-of-type {
-        top: 10px;
+        // top: 10px;
 
         img {
           opacity: 0.2;
@@ -684,12 +686,12 @@ section:not(.hero) {
     a {
 
       &:first-of-type {
-        top: -105px;
+        // top: -105px;
       }
 
       &:nth-of-type(2) {
-        top: -45px;
-        right: 90px;
+        // top: -45px;
+        // right: 90px;
 
         img {
           opacity: 0.25;
@@ -697,7 +699,7 @@ section:not(.hero) {
       }
 
       &:nth-of-type(2n-1) {
-        right: 160px;
+        // right: 160px;
       }
 
       &:last-of-type {
@@ -805,6 +807,7 @@ section:not(.hero) {
 
 .cascadia-journey {
   position: relative;
+  overflow: hidden;
   // width: 100%;
   // min-width: 100%;
   // height: 100%;
